# Bandsox

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  VSOCK_FINAL_REPORT.md  VSOCK_FIX_REPORT.md  VSOCK_MIGRATION.md  VSOCK_RESTORATION_FIX.md  add_vsock_to_existing.py  cleanup_vsock.sh  pyproject.toml  test_snapshot_restore_flow.py  test_vsock_restore.py
bandsox/: agent.py  auth.py  cli.py  cni.py  core.py  firecracker.py  image.py  network.py  runner.py  server.py  vm.py
bandsox-sdk/: README.md  package-lock.json  package.json  tsconfig.json
bandsox-sdk/src/: client.ts  error.ts  index.ts  microvm.ts  terminal.ts  types.ts
bandsox-sdk/tests/: sdk.test.ts
bandsox/agent/: agent  go.mod  main.go
bandsox/static/: index.html  login.html  markdown_viewer.html  terminal.html  vm_details.html
bandsox/vsock/: __init__.py  fastread_server.py  fastwrite_server.py  host_listener.py  protocol.py
docs/: API.md  CLAUDE.md  CONTRIBUTING.md  VSOCK_MIGRATION.md
scripts/: download_kernel.sh
tests/: test_agent_send_event.py  test_agent_vsock_fallback.py  test_append_file.py  test_cni_mtu.py  test_disk_resize.py  test_entropy_unblock.py  test_fastread_resilience.py  test_host_mac.py  test_multiplexer.py  test_netns_nft_first.py  test_server_api.py  test_vsock.py  test_vsock_end_to_end.py  test_vsock_exec_output.py  test_vsock_listener_architecture.py  test_vsock_send_json.py
verification/: Dockerfile  Dockerfile.test  benchmark_go_agent.py  debug_dashboard.py  docker_stuff.py  run_demo.py  run_vm_forever.py  test_fix.py  verify_bandsox.py  verify_dashboard.py  verify_dockerfile.py  verify_file_ops.py  verify_fix.py  verify_go_agent.py  verify_http_access.py  verify_internet.py  verify_managed_vm.py  verify_multiplexer.py  verify_network.py  verify_sessions.py  verify_terminal.py  verify_web_terminal_resize.py
