[project]
name = "bandsox"
version = "2.7"
description = "Fast Firecracker microVM manager"
authors = [{name = "rc", email = "crretsim@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["firecracker", "microvm", "sandbox", "fastapi", "cli"]
dependencies = [
    "requests",
    "requests-unixsocket",
    "fastapi",
    "python-multipart",
    "uvicorn",
    "websockets",
    "pydantic",
    "docker>=7.1.0",
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
]

[project.urls]
Homepage = "https://github.com/HACKE-RC/Bandsox/"
Repository = "https://github.com/HACKE-RC/Bandsox/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bandsox = "bandsox.cli:main"

[tool.hatch.build]
include = [
    "bandsox/**/*.py",
    "bandsox/static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["bandsox"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
